--- a/askme/src/main/resources/templates/sign-in-sign-up.html
+++ b/askme/src/main/resources/templates/sign-in-sign-up.html
@@ -601,12 +601,14 @@
 	const container = document.querySelector(".container");
 	sign_up_btn.addEventListener("click", () => {
 		container.classList.add("sign-up-mode");
-		let url = /*[[${#request.requestURI}]]*/ url = url.replace('login', 'signup');
+		let url = /*[[${#request.requestURI}]]*/
+		 url = url.replace('login', 'signup');
 		history.pushState({}, null, url);
 	});
 	sign_in_btn.addEventListener("click", () => {
 		container.classList.remove("sign-up-mode");
-		let url = /*[[${#request.requestURI}]]*/ url = url.replace('signup', 'login');
+		let url = /*[[${#request.requestURI}]]*/
+		 url = url.replace('signup', 'login');
 		history.pushState({}, null, url);
 	});
 	$("#adminEmailContainer").hide();
