--- a/askme/src/main/resources/templates/requests.html
+++ b/askme/src/main/resources/templates/requests.html
@@ -148,12 +148,38 @@
 								</div>
 								<div class="modal-footer">
 									<a class="btn text-muted" data-dismiss="modal">Close</a>
-									<button id="saveModalButton" class="btn btn-primary pull-right">
+									<button type="submit" id="saveModalButton" class="btn btn-primary pull-right">
 										<i class="fas fa-pencil-alt"></i><span> Save changes</span>
 									</button>
 								</div>
 							</form>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="deleteModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content confirm-modal-content border-0" style="background-color: transparent;">
+					<div class="modal-body p-0">
+						<form th:action="@{/delete-request}" th:method="delete" id="deleteRequestForm">
+							<input id="deleteEmail" type="hidden" name="email">
+							<div class="card border-0 p-sm-3 p-2 justify-content-center">
+								<div class="card-header pb-0 bg-white border-0 ">
+									<div class="row">
+										<div class="col ml-auto">
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+									</div>
+									<p class="font-weight-bold mb-2" style="color: black;">Are you sure you want to delete this User request ?</p>
+									<p id="confirmEmail" class="text-muted "></p>
+								</div>
+								<button id="deleteModalButton" class="btn btn-danger">delete</button>
+								<a class="btn text-muted" data-dismiss="modal">Close</a>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -182,6 +208,19 @@
 			$('h5.modal-title').html('Email information');
 			$('#toEmail').val(toEmail);
 			$('#editModal').modal('show');
+		});
+		
+		$('#requests-data-table tbody').on('click', '.deleteBtn', function() {
+		var closestRow = $(this).closest('tr');
+		var data = table.row($(this).parents(closestRow)).data();
+		var email = data[2];
+		$('#confirmEmail').html(email);
+		$('#deleteEmail').val(email);
+		$('#deleteModal').modal('show');
+		});
+	
+		$('#send-confirm-form').submit(function() {
+ 	 	$(this).find("button[type='submit']").prop('disabled',true);
 		});
 		</script>
 </body>
