--- a/askme/src/main/resources/templates/users.html
+++ b/askme/src/main/resources/templates/users.html
@@ -138,6 +138,14 @@
 		$('#deleteUserId').val(userId);
 		$('#deleteModal').modal('show');
 	});
+	var action = /*[[${action}]]*/ '';
+	 if(action == "deleteUser") {
+		iziToast.success({
+			title: 'Delete User',
+			message: 'Successfully deleted record',
+			position: 'topRight'
+		});
+	}
 	</script>
 </body>
 
